--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                     </div>
                 </div>
             </div>
-            <button id="generate">Generate Password</button>
+            <button id="generate">Regenerate Password</button>
             <div class="password-info">
                 <div class="strength">
                     <label>Password Strength:</label>
